Fixed left alignment

--- a/06form/style.css
+++ b/06form/style.css
@@ -121,23 +121,28 @@ main a:hover {
 
 /* form section */
 .myForm fieldset {
-    border: 1px solid #43a0b6;
+    border: 1px solid #333c2c;
     border-radius: 3px;
     margin-bottom: 1rem;
 }
 .myForm legend {
-    color: #43a0b6;
+    color: #333c2c;
     font-size: .8rem;
 }
-.myForm label {
+
+.left {
+    margin-bottom: 1rem;
+}
+
+.space {
     margin: .5rem;
 }
 
-.lblock, .myForm select, .myForm [type=text], .myForm [type=tel], [type=email], .myForm textarea {
+.myForm label, .myForm select, .myForm [type=text], .myForm [type=tel], [type=email], .myForm textarea, [type=file] {
     display: block;
 }
 
-.myForm [type=text], .myForm [type=tel], [type=email], .myForm select, .myForm textarea {
+.myForm [type=text], .myForm [type=tel], [type=email], .myForm select, .myform textarea, [type=file] {
     border: solid 1px #888;
     padding: .3rem;
     width: 250px;
@@ -145,7 +150,6 @@ main a:hover {
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 200;
 }
-
 .myForm textarea {
     height: 6rem;
     width: 30vw;
